--- a/Final/style.css
+++ b/Final/style.css
@@ -11,23 +11,23 @@ body {
 
 .watch {
   position: relative;
-  width: 300px;
-  height: 300px;
-  background-color: #fff;
-  border-radius: 50%;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  width: 500px;
+  height: 500px;
+  background-color: bisque;
+  border-radius: 20%;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  border: 10px solid #3498db; /* Dekorativer Rand */
+  border: 10px solid goldenrod; /* Dekorativer Rand */
 }
 
 .button {
   position: absolute;
-  width: 50px;
-  height: 30px;
+  width: 100px;
+  height: 60px;
   background-color: #3498db;
   color: #fff;
   border: none;
-  border-radius: 5px;
+  border-radius: 7px;
   cursor: pointer;
   font-size: 14px;
 }
